--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@moralisweb3/common-evm-utils": "^2.14.2",
     "moralis": "^2.14.2",
     "next": "12.2.5",
+    "next-images": "^1.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.58.2",
