--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@moralisweb3/common-evm-utils": "^2.14.2",
+    "@rainbow-me/rainbowkit": "^0.11.0",
+    "ethers": "^5.7.2",
+    "lodash.merge": "^4.6.2",
     "moralis": "^2.14.2",
     "next": "12.2.5",
     "next-images": "^1.8.4",
@@ -18,6 +21,7 @@
     "react-dom": "18.2.0",
     "sass": "^1.58.2",
     "truncate-eth-address": "^1.0.2",
+    "wagmi": "^0.11.6",
     "web3": "^1.7.5"
   },
   "devDependencies": {
