--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bts-lottery-dapp",
-  "version": "0.1.0",
+  "name": "bgl-lottery-dapp",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -20,7 +20,6 @@
     "notiflix": "^3.2.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.58.2",
     "truncate-eth-address": "^1.0.2",
     "wagmi": "^0.11.6",
     "web3": "^1.7.5"
